zuul网管和feign 接口式调用

--- a/order_service_feign_9003/pom.xml
+++ b/order_service_feign_9003/pom.xml
@@ -7,30 +7,24 @@
         <artifactId>springcloud_parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
     <groupId>com.wuzx.fun</groupId>
-    <artifactId>common-api</artifactId>
+    <artifactId>order_service_feign_9003</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>common-api</name>
+    <name>order_service_feign_9003</name>
     <description>Demo project for Spring Boot</description>
 
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.2.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
