--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>product_service_7002</module>
         <module>order_service_9001</module>
         <module>order_service_9002</module>
+        <module>order_service_feign_9003</module>
     </modules>
     <!--Spring Boot配置-->
     <parent>
@@ -54,6 +55,11 @@
                 <version>2.1.2.RELEASE</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+                <version>1.4.2.RELEASE</version>
+            </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
