--- a/eureka_server_8001/src/main/resources/application.yml
+++ b/eureka_server_8001/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8001
 eureka:
   instance:
-    instance-id: eureka-server #实例id
-    hostname: eureka8001.com #eureka服务端的实例名称
+    instance-id: eureka-server #???id
+    hostname: eureka8001.com #eureka?????????????
   client:
-    fetch-registry: false             #false 表示自己端就是注册中心，我的职责就是维护服务实例，并不去检索服务
-    register-with-eureka: false       #false表示不向注册中心注册自己
+    fetch-registry: false             #false ?????????????????????????????????????????????????????
+    register-with-eureka: false       #false????????????????????
     service-url:
       defaultZone: http://eureka8002.com:8002/eureka/
