--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>order_service_9001</module>
         <module>order_service_9002</module>
         <module>order_service_feign_9003</module>
+        <module>zuul_gateway_9527</module>
     </modules>
     <!--Spring Boot配置-->
     <parent>
