zuul网管和feign 接口式调用

--- a/order_service_9001/src/main/resources/application.yml
+++ b/order_service_9001/src/main/resources/application.yml
@@ -1,19 +1,16 @@
 server:
   port: 9001
 
-
 eureka:
   instance:
-    prefer-ip-address: true
+   prefer-ip-address: true
   client:
-    service-url:
-      defaultZone: http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/
+   service-url:
+    defaultZone: http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/
 spring:
   application:
-    name: order-server
+   name: order-server
 
-
-#自定义负载均衡策略:
-product-service: #这个就是调用服务名称
+product-service:
   ribbon:
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+   NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
