--- a/product_service_7001/src/main/resources/application.yml
+++ b/product_service_7001/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: product-service
+  zipkin:
+    base-url: http://www.wuzx.fun:9411
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
