--- a/product_service_7002/src/main/resources/application.yml
+++ b/product_service_7002/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: product-service
+  zipkin:
+    base-url: http://www.wuzx.fun:9411
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -29,8 +34,6 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/  #  设置注册中心地址
-
-
+      defaultZone: http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/
 
 
