--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,12 @@
                 <artifactId>spring-boot-starter-actuator</artifactId>
                 <version>2.1.2.RELEASE</version>
             </dependency>
-
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+                <version>2.1.2.RELEASE</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-zipkin</artifactId>
@@ -93,6 +98,12 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>1.3.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-server</artifactId>
+                <version>2.1.2.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
